--- a/index.html
+++ b/index.html
@@ -1,43 +1,110 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jokes Generator</title>
-    <script>
-        document.addEventListener('DOMContentLoaded',()=>{
-            document.querySelector('.button').onclick = function(){
-                document.querySelector('.buildup').innerHTML='';
-                document.querySelector('.punchline').innerHTML='';
-                fetch('https://official-joke-api.appspot.com/jokes/random')
-                .then(response => response.json())
-                .then(data => {
-                    let x= document.querySelector('.buildup');
-                    x.innerHTML=data.setup;
-                    let y= document.querySelector('.punchline');
 
-                    setTimeout(() => {
-                       y.innerHTML = data.punchline; 
-                    }, 3000);
-                })
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            document.querySelector('#newjoke').onclick = function () {
+                event.preventDefault();
+                document.querySelector('#buildup').innerHTML = '';
+                document.querySelector('#punchline').innerHTML = '';
+                fetch('https://official-joke-api.appspot.com/jokes/random')
+                    .then(response => response.json())
+                    .then(data => {
+                        let x = document.querySelector('#buildup');
+                        x.innerHTML = data.setup;
+                        let y = document.querySelector('#punchline');
+                        let s=  "https://twitter.com/intent/tweet?text=" + data.setup + data.punchline;
+                        setTimeout(() => {
+                            y.innerHTML = data.punchline;
+                        }, 3000);
+                    })
             }
         });
     </script>
+    <title>Hello, world!</title>
 </head>
+
 <body>
     <div class="container">
-        <div class="mainjoke">
-            <div class="buildup">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <a class="navbar-brand" href="#">JOKES GENERATOR </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Help
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">API USED</a>
+
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
+
+                </ul>
 
             </div>
-            <div class="punchline">
-
+        </nav>
+        <div class="card mx-auto" style="width: 30rem; height: 10rem;">
+            <img src="https://source.unsplash.com/random/800*800" class="card-img-top" alt="...">
+            <div class="card-body">
+                <!-- <h5 class="card-title" id="buildup">Card title</h5> -->
+                <div class="card card-title" style="height:80px;">
+                    <div class="card-body" id="buildup">
+                        This is some text within a card body.
+                    </div>
+                </div>
+                <!-- card-text -->
+                <div class="card card-text" style="height: 50px;">
+                    <div class="card-body" id="punchline">
+                        This is some text within a card body.
+                    </div>
+                </div>
+                <!-- <p class="card-text" id="punchline">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                <!-- <a href="#" class="btn btn-primary" id="newjoke">new joke</a> -->
+                <button class="btn btn-primary my-3" id="newjoke">New Joke </button>
+                <a class="twitter-share-button" href=>
+                    Tweet</a>
             </div>
-            <div class="button">
-                <button>New Joke</button>
-            </div>
-        </div>
         </div>
     </div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+
+    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    -->
 </body>
+
 </html>
