--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
                         setTimeout(() => {
                             y.innerHTML = data.punchline;
                         }, 3000);
-                    })
+                        var tweetText=data.setup + ' '+ data.punchline;
+                        
+                        document.querySelector('#tweetnow').onclick = () => {
+                            let tweetpost = `https://twitter.com/intent/tweet?text=${tweetText}`;
+                            window.open(tweetpost);
+                        }
+                    });
+            
             }
         });
     </script>
@@ -67,25 +74,24 @@
             </div>
         </nav>
         <div class="card mx-auto" style="width: 30rem; height: 10rem;">
-            <img src="https://source.unsplash.com/random/800*800" class="card-img-top" alt="...">
+            <img src="https://source.unsplash.com/1600x900/?laugh,joke,nature" class="card-img-top" alt="...">
             <div class="card-body">
                 <!-- <h5 class="card-title" id="buildup">Card title</h5> -->
-                <div class="card card-title" style="height:80px;">
+                <div class="card card-title" style="height:100px;">
                     <div class="card-body" id="buildup">
-                        This is some text within a card body.
+                        Joke will appear here. Hit the New Joke Button below !
                     </div>
                 </div>
                 <!-- card-text -->
-                <div class="card card-text" style="height: 50px;">
+                <div class="card card-text" style="height: 100px;">
                     <div class="card-body" id="punchline">
-                        This is some text within a card body.
+                        punch-line will appear here. Hit the New Joke Button below !
                     </div>
                 </div>
                 <!-- <p class="card-text" id="punchline">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                 <!-- <a href="#" class="btn btn-primary" id="newjoke">new joke</a> -->
                 <button class="btn btn-primary my-3" id="newjoke">New Joke </button>
-                <a class="twitter-share-button" href=>
-                    Tweet</a>
+                <button class="btn btn-primary my-3" id="tweetnow">Tweet It</button>
             </div>
         </div>
     </div>
