--- a/about.html
+++ b/about.html
@@ -57,29 +57,14 @@
     <h3 class="my-3 mx-3">Made By :</h3>
     <div class="card-group my-3 mx-3">
         <div class="card">
-            <img src="https://scontent.fdel34-1.fna.fbcdn.net/v/t1.0-9/74293122_1129119090622616_7817446008979193856_o.jpg?_nc_cat=102&ccb=2&_nc_sid=09cbfe&_nc_ohc=Q6xy7d16CAYAX94a8E1&_nc_ht=scontent.fdel34-1.fna&oh=dd1f7c2c2aa882af8853ff83dcc8f7b1&oe=5FD6DAD1" class="card-img-top" alt="...">
+            <img src="https://scontent.fdel34-1.fna.fbcdn.net/v/t1.6435-9/74293122_1129119090622616_7817446008979193856_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=PlbJXyzAmrsAX_snE6G&_nc_ht=scontent.fdel34-1.fna&oh=bd696c2d993ca9fd0d27dcda80c8ca90&oe=619B8E33" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Gaurav Yadav</h5>
-                <p class="card-text">I handled the API calls for the joke-API,dynamic-image(unsplash) on homepage and the logic behind the tweet button for tweeting the current joke.</p>
+                <p class="card-text"></p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
         </div>
-        <div class="card">
-            <img src="https://scontent.fdel34-1.fna.fbcdn.net/v/t1.0-1/c0.0.320.320a/p320x320/83177740_2444104112479203_3377841398614065152_o.jpg?_nc_cat=103&amp;ccb=2&amp;_nc_sid=7206a8&amp;_nc_ohc=PmfvDRTD6mAAX-032IJ&amp;_nc_ht=scontent.fdel34-1.fna&amp;tp=27&amp;oh=564c789cc093c9df2fb6d507b9aaf9d3&amp;oe=5FD90134" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Ankur Godara</h5>
-                <p class="card-text">I with rahul handled the front-end and the whole design of the Website and integrated the html pages </p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-        </div>
-        <div class="card">
-            <img src="https://scontent.fdel34-1.fna.fbcdn.net/v/t1.0-9/124978087_2961876960717254_234221255166524750_o.jpg?_nc_cat=104&ccb=2&_nc_sid=09cbfe&_nc_ohc=CUauqYOar4oAX_2n6bx&_nc_ht=scontent.fdel34-1.fna&oh=729bb0e74eeaa95ddeb7563284f05bd8&oe=5FD7AB5B" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Rahul Garg</h5>
-                <p class="card-text">I with Ankur handled the front-end part , mainly the usage of Bootstrap cards and navigation Bar in the website </p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-        </div>
+        
     </div>
     <div class="card">
         <h5 class="card-header">About The Project</h5>
